--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "react-icons": "^4.11.0",
     "react-tippy": "^1.4.0",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.15.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
