--- a/client/package.json
+++ b/client/package.json
@@ -9,20 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-hover-card": "^1.0.7",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-toggle": "^1.0.3",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "crypto-js": "^4.2.0",
+    "@types/d3": "^7.4.3",
+    "@types/react-simple-maps": "^3.0.6",
+    "@types/topojson-client": "^3.1.5",
+    "d3": "^7.9.0",
+    "d3-array": "^3.2.4",
+    "d3-geo": "^3.1.1",
     "date-fns": "2.28.0",
     "date-fns-tz": "^2.0.0",
     "framer-motion": "^10.16.4",
@@ -31,25 +23,23 @@
     "moment": "^2.29.4",
     "next": "13.5.5",
     "react": "^18",
-    "react-calendar": "^4.6.1",
-    "react-cookie": "^6.1.1",
-    "react-day-picker": "^8.9.0",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
-    "react-tippy": "^1.4.0",
+    "react-simple-maps": "^3.0.0",
+    "react-svg-worldmap": "^2.0.0-alpha.16",
     "react-toastify": "^9.1.3",
+    "react-tooltip": "^5.28.0",
     "recharts": "^2.15.2",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss": "^3",
+    "tailwindcss-animate": "^1.0.7",
+    "topojson-client": "^3.1.0"
   },
   "devDependencies": {
-    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "postcss": "^8",
-    "tailwindcss": "^3",
     "typescript": "^5"
   }
 }
