--- a/api/.env
+++ b/api/.env
@@ -1,8 +1,11 @@
-DB_URI=mongodb+srv://iplistuser:wnYSQmH3KMCIuLcz@iplist.liilm3z.mongodb.net/?retryWrites=true&w=majority&appName=IPlist
-JWT_SECRET=455520534f5520554d204445555320444f204e4f564f204d554e444f
-JWT_EXPIRES=7d
-SFTP_HOST=172.20.13.36
-SFTP_USER=vpn_ftpuser
-SFTP_PASSWORD=TR3ejUBUPq4hZHrr
-SFTP_PORT=22
-PATH="./api/node_modules/.bin:$PATH"
+FORTIWEB1_NAME=WAF-PMS
+FORTIWEB1_URL=https://172.30.1.254
+FORTIWEB1_USER=api
+FORTIWEB1_PASS=Api@12345
+FORTIWEB1_ADOMS=root
+
+FORTIWEB2_NAME=WAF-PMS02
+FORTIWEB2_URL=https://10.201.131.2
+FORTIWEB2_USER=api
+FORTIWEB2_PASS=Api12345@
+FORTIWEB2_ADOMS=LIMPURB,SMS,SEGOV,SEMIT,CASACIVIL,SECOM,SEMGE,PGMS,SEFAZ,SEDUR,SECIS,SECULT,SEMDEC,CGM,SEMUR,SPMJ
