--- a/api/.env
+++ b/api/.env
@@ -9,3 +9,9 @@ FORTIWEB2_URL=https://10.201.131.2
 FORTIWEB2_USER=api
 FORTIWEB2_PASS=Api12345@
 FORTIWEB2_ADOMS=LIMPURB,SMS,SEGOV,SEMIT,CASACIVIL,SECOM,SEMGE,PGMS,SEFAZ,SEDUR,SECIS,SECULT,SEMDEC,CGM,SEMUR,SPMJ
+
+FORTIWEB3_NAME=WAF-PMS02
+FORTIWEB3_URL=https://10.201.131.2
+FORTIWEB3_USER=api2
+FORTIWEB3_PASS=Api12345@
+FORTIWEB3_ADOMS=SEINFRA,SEMAN,SEMOP,SEMOB,TRANSALVADO,SEMPRE,SMED,FMLF,FGM,FCM,DESAL,GCMS,SALTUR,PMLF
