--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,15 +1,13 @@
 FROM ubi8/nodejs-20
-
+ 
+# Add application sources
+ 
 WORKDIR /opt/app-root/src
-
-# Copia os arquivos do projeto
+ 
 ADD . .
-
-# Instala o Nest CLI globalmente
-RUN npm install -g @nestjs/cli
-
-# Instala as dependências do projeto
+ 
+# Install the dependencies
 RUN npm install
-
-# Inicia a aplicação
-CMD ["npm", "run", "start", "--", "--port", "3001"]
+ 
+# Run script uses standard ways to run the application
+CMD npm run -d start --port 3001
