--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "start": "nest start"
+    "start": "nest start",
+    "start:prod": "node dist/main"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.0",
