--- a/api/package.json
+++ b/api/package.json
@@ -6,8 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "start": "nest start",
-    "start:prod": "node dist/main"
+    "start": "nest start"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.0",
