--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,16 +1,27 @@
 FROM ubi8/nodejs-20
 
-USER 0
-
-
-# Add application sources
- 
+# Configura diretório de trabalho
 WORKDIR /opt/app-root/src
- 
-ADD . .
-USER 1001
-# Install the dependencies
-RUN npm install
 
-# Run script uses standard ways to run the application
-CMD npm run -d start --port 3001
+# Copia apenas os arquivos necessários para instalação
+COPY package*.json ./
+COPY tsconfig*.json ./
+
+# Instala dependências como root e ajusta permissões
+USER 0
+RUN npm install --include=dev && \
+    chown -R 1001:0 /opt/app-root/src && \
+    chmod -R g+rw /opt/app-root/src
+
+# Volta para o usuário não-root padrão (1001)
+USER 1001
+
+# Copia o restante do código fonte
+COPY . .
+
+# Build da aplicação
+RUN npm run build
+
+# Configurações finais
+EXPOSE 3001
+CMD ["npm", "run", "start:prod"]
