--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,24 +1,26 @@
 FROM ubi8/nodejs-20
 
-# Configura diretório de trabalho
+# Usa root o tempo todo
+USER 0
+
+# Diretório de trabalho
 WORKDIR /opt/app-root/src
 
-# Copia apenas os arquivos necessários para instalação
+# Copia os arquivos de dependência
 COPY package*.json ./
 COPY tsconfig*.json ./
 
-# Instala dependências como root e ajusta permissões
-USER 0
-RUN npm install --include=dev && \
-    chown -R 1001:0 /opt/app-root/src && \
-    chmod -R g+rw /opt/app-root/src
+# Instala dependências de desenvolvimento
+RUN npm install --include=dev
 
-# Volta para o usuário não-root padrão (1001)
-USER 1001
-
-# Copia o restante do código fonte
+# Copia o restante do código
 COPY . .
 
-# Configurações finais
+# Compila o projeto
+RUN npm run build
+
+# Expõe a porta da aplicação
 EXPOSE 3001
+
+# Inicia a aplicação
 CMD ["npm", "run", "start"]
