--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -16,6 +16,6 @@ COPY . .
 # RUN chown -R 1001:0 /opt/app-root/src && chmod -R g+rw /opt/app-root/src
 # USER 1001
 
-EXPOSE 3001
+EXPOSE 8080
 
-CMD ["npm", "run", "start"]
+CMD ["npm", "run", "start -host"]
