--- a/api/.env
+++ b/api/.env
@@ -15,3 +15,5 @@ FORTIWEB3_URL=https://10.201.131.2
 FORTIWEB3_USER=api2
 FORTIWEB3_PASS=Api12345@
 FORTIWEB3_ADOMS=SEINFRA,SEMAN,SEMOP,SEMOB,TRANSALVADO,SEMPRE,SMED,FMLF,FGM,FCM,DESAL,GCMS,SALTUR,PMLF
+
+HOST=0.0.0.0
