--- a/api/.env
+++ b/api/.env
@@ -16,4 +16,10 @@ FORTIWEB3_USER=api2
 FORTIWEB3_PASS=Api12345@
 FORTIWEB3_ADOMS=SEINFRA,SEMAN,SEMOP,SEMOB,TRANSALVADO,SEMPRE,SMED,FMLF,FGM,FCM,DESAL,GCMS,SALTUR,PMLF
 
+FORTIWEB4_NAME=WAF-PMS02
+FORTIWEB4_URL=https://10.201.131.2
+FORTIWEB4_USER=api3
+FORTIWEB4_PASS=Api12345@
+FORTIWEB4_ADOMS=COGEL
+
 HOST=0.0.0.0
