--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.12",
+    "@nestjs/swagger": "^11.2.1",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^3.0.0",
     "@types/crypto-js": "^4.2.2",
@@ -41,7 +42,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.2.0",
-    "ssh2-sftp-client": "^12.0.0"
+    "ssh2-sftp-client": "^12.0.0",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.2",
