--- a/api/.env
+++ b/api/.env
@@ -20,6 +20,6 @@ FORTIWEB4_NAME=WAF-PMS02
 FORTIWEB4_URL=https://10.201.131.2
 FORTIWEB4_USER=api3
 FORTIWEB4_PASS=Api12345@
-FORTIWEB4_ADOMS=COGEL
+FORTIWEB4_ADOMS=COGEL,SACPB
 
 HOST=0.0.0.0
