--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-toastify": "^9.1.3",
     "react-tooltip": "^5.28.0",
     "recharts": "^2.15.2",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^3",
     "tailwindcss-animate": "^1.0.7",
     "topojson-client": "^3.1.0"
