--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.16",
     "@types/d3": "^7.4.3",
     "@types/react-simple-maps": "^3.0.6",
     "@types/topojson-client": "^3.1.5",
